added inventation file

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
 
         <br><br>
-        <p class="center-align"> <a href="resume/greeting.dox" class="waves-effect waves-light btn-large"><i class="material-icons left">file_download</i>Download Inventation</a></p>
+        <p class="center-align"> <a href="files/greetings.docx" class="waves-effect waves-light btn-large"><i class="material-icons left">file_download</i>Download Inventation</a></p>
         </center>
     </div>
     <br>
